-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.8, 6.8.2
-
-
6d810ac41 (dev), 19a503aa7 (6.10)
The Qt virtual keyboard's Caps Lock is not functioning as expected in the following scenario. When the Caps Lock button is double-clicked, the keyboard should lock for uppercase letters. However, this does not occur if the keyboard is already opened with uppercase letters.
Non-working scenario:
- Open the keyboard; it opens with uppercase letters initially.
- Double-click on the Caps Lock button.
Expected result: The keyboard should lock with uppercase letters upon double-clicking.
It is observed that three clicks are needed to lock the keyboard with uppercase letters.
If the keyboard is opened with lowercase letters, double-clicking the Caps Lock button locks the keyboard to uppercase as expected. The issue primarily occurs when the keyboard is opened with uppercase letters.
I have attached an example project to reproduce this issue.
| For Gerrit Dashboard: QTBUG-133614 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 649528,4 | Restore shift when using capsLock | dev | qt/qtvirtualkeyboard | Status: MERGED | +2 | +1 |
| 661231,2 | Restore shift when using capsLock | 6.10 | qt/qtvirtualkeyboard | Status: MERGED | +2 | 0 |