Restore shift when using capsLock

In current implementation,
double-clicking on shift always works if shift is false.
Now it will work without depending the shift state and
shift state will go to the previous state after the capsLock,

inputpanel::tst_plugin::test_toggleShift() will have new
expected outputs in row2 and row3 with this behaviour.

Fixes: QTBUG-133614
Change-Id: Iba6f94b7ef2b73ec92b074fae00d24558f86199e
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>
(cherry picked from commit 6d810ac41df96f1ad984f56e17f16860bec2abbf)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>